# toml11-free-nonheap-object

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: GetSemanticVersion.cmake  SetCompilerArchitectureId.cmake
